# Minecrfat-web-in-C-

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  minecraft.data  minecraft.html  minecraft.js  minecraft.wasm  vercel.json
shaders/: fog.frag  fog.vert
src/: blocks.h  main.cpp
src/game/: camera.h
src/generation/: cave.cpp  cave.h  surface.cpp  surface.h
src/player/: physics.cpp  physics.h
src/world/: world.cpp  world.h
src/world/chunk/: chunk.cpp  chunk.h
